Add the index link

--- a/profile.html
+++ b/profile.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html">Link to profile page</a>
+    <p>Name: Phiriya Promkaewma</p>
 </body>
 </html>
