--- a/Friendprofile.html
+++ b/Friendprofile.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="profile.html">Link to profile page</a>
-    <a href="Friendprofile.html">link to friend-profile</a>
+    Chatchai Chatkampang
 </body>
 </html>
